--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ crashlytics-build.properties
 #
 Assets/google-services.json
 Assets/google-services.json.meta
+Assets/StreamingAssets/google-services-desktop.json
+Assets/StreamingAssets/google-services-desktop.json.meta
